k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chaimcp
spec:
  type: ClusterIP
  selector:
    app: chaimcp
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
